--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的博客</title>
+    <title>白辰的博客</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>欢迎来到我的博客</h1>
+        <h1>欢迎来到白辰的个人博客</h1>
         <nav>
             <ul>
                 <li><a href="index.html">首页</a></li>
@@ -28,7 +28,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 我的博客</p>
+        <p>&copy; 2025 白辰的博客</p>
     </footer>
     <script src="script.js"></script>
 </body>
